cloud-infra/AWS/infrastructure/modules/network/gateways.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat-a.id
  subnet_id     = aws_subnet.public.id
}
